force-app/main/default/objects/Contract_Status__c/Contract_Status__c.object-meta.xml
<CustomObject>
    <description>Stores contract information and renewal status for accounts</description>
    <label>Contract Status</label>
    <nameField>
        <displayFormat>CONT-{0000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Statuses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>